音频使用paging加载 和一些小例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="poco.cn.jetpackdemo">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,16 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <activity android:name=".singletest.liveData.LiveDataActivity" />
+        <activity android:name=".singletest.lifecycle.LifecycleActivity" />
+        <activity
+            android:name=".audioPaging.AudioPagingActivity"
+            android:label="@string/title_activity_audio_paging"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".samplePaging.proxy.HeaderProxyActivity"
             android:label="@string/title_activity_header_proxy"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".samplePaging.basic.BasicUsageActivity"
-            android:label="@string/title_activity_basic_usage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".samplePaging.ui.BasicUsageActivity"
+            android:name=".samplePaging.basic.BasicUsageActivity"
             android:label="@string/title_activity_basic_usage"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity">
